--- a/ZapChat/src/app/login/login.component.scss
+++ b/ZapChat/src/app/login/login.component.scss
@@ -159,6 +159,7 @@ input[type=password] {
   background-image: url('src/assets/images/Hide_100px.png');
   width: 24px;
   height: 24px;
+  //padding-top: 10px;
 }
 .header {
   font-family: $font_family_1;
