--- a/ZapChat/src/app/add-contacts/add-contacts.component.html
+++ b/ZapChat/src/app/add-contacts/add-contacts.component.html
@@ -1,4 +1,5 @@
 <div class="createContactPanel">
+    <div class="blackOverlay"></div>
   <form class="form" name="addContact" >
       <div class="header">
           <h1>Add Contact!</h1>
@@ -11,7 +12,6 @@
       <div class="addContact">
               <button type="button" class='addButton' id='addBtn' (click)="onClickAdd()">Add Contact!</button>
    </div>
-   <img class="addContactImage"src="assets/images/z.jpg
-   " height="200px" width="200px">
    </form>
+   <img class="backgroundImage" src="assets/images/z.jpg" height="250x" width="250px">
   </div>
