--- a/ZapChat/src/app/chat-window/chat-window.component.scss
+++ b/ZapChat/src/app/chat-window/chat-window.component.scss
@@ -104,6 +104,7 @@ $font_size_value: 17px;
   width: 68%;
   padding: 5px;
   padding-left: 15px;
+  margin-left: 10px;
   background-color: $background_color_6;
 }
 
